# osmo-hnbgw

./: .gitignore  .gitreview  AUTHORS  Makefile.am  README.md  TODO-RELEASE  configure.ac  osmoappdesc.py
contrib/: jenkins.sh  osmo-hnbgw.spec.in
contrib/systemd/: osmo-hnbgw.service
debian/: changelog  control  copyright  osmo-hnbgw-doc.install  osmo-hnbgw.install  postinst  rules
doc/: Makefile.am
doc/charts/: Makefile.am  conn_map_ps.ladder  hnbgw_context_map.ladder  hnbgw_context_map.msc  hnbgw_context_map_fsm.dot  sccp.dot
doc/examples/: Makefile.am
doc/examples/osmo-hnbgw/: osmo-hnbgw-cnpool.cfg  osmo-hnbgw-cs7.cfg  osmo-hnbgw-pfcp.cfg  osmo-hnbgw.cfg
doc/manuals/: Makefile.am  osmohnbgw-usermanual.adoc
doc/manuals/chapters/: overview.adoc  running.adoc
include/osmocom/: Makefile.am
include/osmocom/hnbgw/: Makefile.am  cnlink.h  context_map.h  hnb.h  hnb_persistent.h  hnbgw.h  hnbgw_cn.h  hnbgw_hnbap.h  hnbgw_pfcp.h  hnbgw_ranap.h  hnbgw_rua.h  hnbgw_sccp.h  kpi.h  mgw_fsm.h  nft_kpi.h  ps_rab_ass_fsm.h  ps_rab_fsm.h  ranap_rab_ass.h  tdefs.h  umts_cell_id.h  vty.h
src/: Makefile.am
src/osmo-hnbgw/: Makefile.am  cnlink.c  cnlink_fsm.c  cnlink_paging.c  context_map.c  context_map_rua.c  context_map_sccp.c  hnb.c  hnb_persistent.c  hnbgw.c  hnbgw_cn.c  hnbgw_hnbap.c  hnbgw_l3.c  hnbgw_pfcp.c  hnbgw_ranap.c  hnbgw_rua.c  hnbgw_sccp.c  hnbgw_vty.c  kpi_dtap.c  kpi_ranap.c  mgw_fsm.c  nft_kpi.c  osmo_hnbgw_main.c  ps_rab_ass_fsm.c  ps_rab_fsm.c  ranap_rab_ass.c  tdefs.c  umts_cell_id.c
tests/: Makefile.am  cnpool.vty  ctrl_test_runner.py  nri_cfg.vty  osmo-hnbgw-vty-test.cfg  osmo-hnbgw.vty  pfcp_cfg.vty.with_pfcp  test_nodes.ctrl  testsuite.at
tests/asn1ctx/: Makefile.am  asn1ctx_test.c  asn1ctx_test.ok
tests/config/: defaults.cfg  defaults.vty  legacy.cfg  one_cs7.cfg  one_cs7.vty  one_cs7_with_addrs.vty  one_cs7_with_iucs_addr.cfg  one_cs7_with_iucs_addr.vty  one_cs7_with_iups_addr.cfg  one_cs7_with_iups_addr.vty  run_tests.sh  two_cs7.cfg  two_cs7.vty  two_cs7_with_addrs.cfg  two_cs7_with_addrs.vty
tests/qemu/: check-depends.sh  ext_test_wrapper.sh  initrd-build.sh
tests/ranap_rab_ass/: Makefile.am  ranap_rab_ass_test.c  ranap_rab_ass_test.ok
tests/umts_cell_id/: Makefile.am  umts_cell_id_test.c  umts_cell_id_test.ok
