noinst_HEADERS = \
	cnlink.h \
	context_map.h \
	hnb.h \
	hnb_persistent.h \
	hnbgw.h \
	hnbgw_cn.h \
	hnbgw_hnbap.h \
	hnbgw_pfcp.h \
	hnbgw_ranap.h \
	hnbgw_rua.h \
	hnbgw_sccp.h \
	kpi.h \
	mgw_fsm.h \
	nft_kpi.h \
	ps_rab_ass_fsm.h \
	ps_rab_fsm.h \
	ranap_rab_ass.h \
	tdefs.h \
	umts_cell_id.h \
	vty.h \
	$(NULL)
